[gd_scene load_steps=8 format=3 uid="uid://cktvsan1pxk0e"]

[ext_resource type="Script" uid="uid://dj4khbfnc5pjm" path="res://scripts/player_2.gd" id="1_s551d"]
[ext_resource type="SpriteFrames" uid="uid://bvgnvdpjg31p0" path="res://assets/players/skins/hunter.tres" id="2_s551d"]
[ext_resource type="SpriteFrames" uid="uid://mdc18738m3u0" path="res://assets/PowerUps/efectos/shield_fx.tres" id="3_yjax8"]
[ext_resource type="AudioStream" uid="uid://bvxfmti6fhx2v" path="res://fx/players/Sonido_Dano.wav" id="4_v7tvf"]
[ext_resource type="AudioStream" uid="uid://cebityb8f6c6i" path="res://fx/players/Dash_op1.wav" id="5_povjg"]
[ext_resource type="AudioStream" uid="uid://dksfb8hje0ujd" path="res://fx/players/Sonido_Muerte_op3.wav" id="6_hkoe6"]

[sub_resource type="CircleShape2D" id="CircleShape2D_s551d"]
radius = 9.0

[node name="player2" type="CharacterBody2D"]
rotation = 1.57079
script = ExtResource("1_s551d")

[node name="AnimatedSprite2DP2" type="AnimatedSprite2D" parent="."]
position = Vector2(1.19209e-07, 0)
rotation = -1.57079
sprite_frames = ExtResource("2_s551d")
animation = &"dash"

[node name="ShieldEffect" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = ExtResource("3_yjax8")
animation = &"shield_break"

[node name="ShootingPointP2" type="Marker2D" parent="."]
position = Vector2(-12, -5)
gizmo_extents = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.65436e-24, 0)
rotation = -1.57081
shape = SubResource("CircleShape2D_s551d")

[node name="DisparoSFX" type="AudioStreamPlayer2D" parent="."]
volume_db = -5.0

[node name="Da√±oSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_v7tvf")
volume_db = -5.0

[node name="DashSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_povjg")
volume_db = -5.0

[node name="MuerteSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_hkoe6")
volume_db = -5.0

[connection signal="animation_finished" from="AnimatedSprite2DP2" to="." method="_on_animated_sprite_2dp_2_animation_finished"]
